[project]
name = "AgentHub"
version = "0.1.0"
description = "Solving the 'how do agents find each other?' problem in Agno-based multi-agent systems. AgentHub implements a central discovery service – the hub – where agents register using A2A Agent Card formats. This allows complex workflows where an orchestrator can dynamically query the Hub by required skill (e.g., 'web_search'), retrieve the necessary agent's details, and then interact with it directly, promoting decoupled and scalable agent architectures."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.2.16",
    "duckduckgo-search>=8.0.0",
    "fastapi>=0.115.12",
    "googlesearch-python>=1.3.0",
    "groq>=0.22.0",
    "lxml-html-clean>=0.4.2",
    "mcp>=1.6.0",
    "newspaper4k>=0.9.3.1",
    "openai>=1.73.0",
    "praw>=7.8.1",
    "pycountry>=24.6.1",
    "yfinance>=0.2.55",
]
